fix about headline and headlines on mobile

--- a/src/css/all.css
+++ b/src/css/all.css
@@ -15,8 +15,6 @@ body {
   margin: 0 0;
   background: #fbfbfb;
 }
-h1 { font-size: 76px; }
-h2 { font-size: 49px;}
 h3 {
   font-size: 20px;
   line-height: 1.2;
